# alcolator

./: .gitignore  Alcolator.db  CMakeLists.txt  README.md  Schema.sql  build.sh  run.sh
assets/: admin-new.html  admin.html  admin_new.html  admin_view.html  app.html  login.html  main.html  main_bacmode.html  main_viewmode.html
assets/css/: app.css
assets/js/: admin.js  login.js  main.js  window.js
assets/ts_compiled/: login.js  main.js
cmake/: App.cmake  FindSQLite3.cmake
include/sqlite3/: sqlite3.exp
src/: Alcholator.cpp  Alcholator.h  Alcolator.cpp  Alcolator.h  UI.h  main.cpp
src/database/: Database.cpp  Database.h
src/database/models/: ActionLog.cpp  ActionLog.h  Beverage.cpp  Beverage.h  Experiment.cpp  Experiment.h  Identity.cpp  Identity.h  Model.h  Result.cpp  Result.h  Subject.cpp  Subject.h
src/database/models/enums/: AccessLevel.h  Model.h  SQLCommandType.h  SQLCondition.h
src/utils/: Utilities.cpp  Utilities.h
src/view_controllers/: AdminVC.cpp  AdminVC.h  LoginVC.cpp  LoginVC.h  MainVC.cpp  MainVC.h  ViewController.cpp  ViewController.h
typescript/: login.ts  main.ts  tsconfig.json
